fixed bug on small screens

--- a/assets/calculator.css
+++ b/assets/calculator.css
@@ -174,7 +174,7 @@
 
   #myCalculator main p + p::after {
     display: block;
-    margin-top: -10px;
+    margin-top: -3px;
     color: #fff;
   }
 
